objects/cscrm__Site__c.object
<CustomObject>
    <description>The Site object stores details for specific locations within an Address, typically where Customer Premises Equipment (CPE) will be installed.  A large office building at a single Address could have many Sites and these could be defined at different levels of granularity. For example, a Site could simply be Room 25 on the 1st Floor.  Alternatively a Site could be Rack 23 within Room 25 on the 1st Floor.</description>
    <fields>
        <fullName>UPC_Site_Number__c</fullName>
        <displayFormat>S-{0000000}</displayFormat>
        <label>Site Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>cscrm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscrm__Floor__c</fullName>
        <label>Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Installation_Address_Details__c</fullName>
        <formula>cscrm__Installation_Address__r.cscrm__Address_Details__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Address Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Installation_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installation Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscrm__Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Floor Mounted</fullName>
                </value>
                <value>
                    <fullName>Shelf Mounted</fullName>
                </value>
                <value>
                    <fullName>Rack Mounted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscrm__Power_Sockets__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power Sockets</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Primary_Contact_Details__c</fullName>
        <formula>IF( ISBLANK(cscrm__Primary_Contact__r.FirstName) , &apos;&apos;, cscrm__Primary_Contact__r.FirstName +&apos; &apos;) + 
cscrm__Primary_Contact__r.LastName + 
IF( ISBLANK(cscrm__Primary_Contact__r.Email) , &apos;&apos;, &apos;, Email:&apos; + cscrm__Primary_Contact__r.Email) + 
IF( ISBLANK(cscrm__Primary_Contact__r.Phone) , &apos;&apos;, &apos;, Phone:&apos; + cscrm__Primary_Contact__r.Phone) + 
IF( ISBLANK(cscrm__Primary_Contact__r.MobilePhone ) , &apos;&apos;, &apos;, Mobile:&apos; + cscrm__Primary_Contact__r.MobilePhone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sites</relationshipLabel>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscrm__Rack_Location__c</fullName>
        <label>Rack Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Secondary_Contact_Details__c</fullName>
        <formula>IF( ISBLANK(cscrm__Secondary_Contact__r.FirstName) , &apos;&apos;, cscrm__Secondary_Contact__r.FirstName +&apos; &apos;) + 
cscrm__Secondary_Contact__r.LastName + 
IF( ISBLANK(cscrm__Secondary_Contact__r.Email) , &apos;&apos;, &apos;, Email:&apos; + cscrm__Secondary_Contact__r.Email) + 
IF( ISBLANK(cscrm__Secondary_Contact__r.Phone) , &apos;&apos;, &apos;, Phone:&apos; + cscrm__Secondary_Contact__r.Phone) + 
IF( ISBLANK(cscrm__Secondary_Contact__r.MobilePhone ) , &apos;&apos;, &apos;, Mobile:&apos; + cscrm__Secondary_Contact__r.MobilePhone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secondary Contact Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscrm__Secondary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sites (Secondary Contact)</relationshipLabel>
        <relationshipName>Sites1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscrm__Spare_Network_Port__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spare Network Port</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscrm__Suite_Room__c</fullName>
        <label>Suite/Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Site</label>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>